--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ csv = "1.2.1"
 fake = { version = "2.6", features=['derive', "chrono"]}
 rand = "0.8"
 serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.99"
